--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,11 +80,11 @@ dependencies:
   file_picker:
   draggable_widget:
   badges:
+  hmssdk_flutter:
   dart_jsonwebtoken:
   uuid: ^3.0.6
   flutter_platform_alert:
   flutter_dialogs: ^3.0.0
-  webview_flutter:
 
 
 dev_dependencies:
