--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,9 +83,8 @@ dependencies:
   hmssdk_flutter:
   dart_jsonwebtoken:
   uuid: ^3.0.6
-  flutter_platform_alert:
-  flutter_dialogs: ^3.0.0
-
+  device_info:
+  connectivity:
 
 dev_dependencies:
   flutter_test:
@@ -116,8 +115,10 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/icons/
+    - assets/icon/
     - assets/images/landingPage/
     - assets/images/loginpages/
+    - assets/images/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
