--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.6.0+1
 
 environment:
   sdk: '>=2.17.1 <3.0.0'
@@ -86,6 +86,8 @@ dependencies:
   local_auth: ^2.1.2
   cached_network_image:
   zego_uikit_prebuilt_call:
+  image_picker:
+  image_cropper:
   hmssdk_flutter:
     path: 100ms-flutter-main
 
